# GameOfLife

./: .gitignore  CMakeLists.txt  README.md  game_of_life.cpp  game_of_life.h  main.cpp
